Added permissions, fixed for 1938

--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-Welcome to Broadcaster, the simple broadcasting plugin for CraftBukkit
+Development Branch of Broadcast.
+Works on 1938 - not sure on others.
